--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,5 +1,6 @@
 $primary_color: #653182;
 
+$blue-accent: #0676ec;
 $blue-primary: #3ec1eb;
 $blue-font: #185698;
 $blue-background: #84d0fd;
