--- a/src/scss/selector.scss
+++ b/src/scss/selector.scss
@@ -99,8 +99,7 @@
 /* Multiple */
 .selector-container.multiple .selector-input { 
     padding: 0 0 3.5px 0;
-    cursor: text; 
-    background-color: white;
+    cursor: text;
 }
 
 .selector-container:not(.multiple) select.ng-not-empty + label .selector-values{ 
@@ -131,11 +130,10 @@
 .selector-container.multiple .selector-values>li {
     position: relative;
 	font-weight: 300;
-    border-radius: 3px; 
-    box-shadow: inset 0 1px 1px rgba(255, 255, 255, .5), 0 1px 1px rgba(0, 0, 0, .2);
-	color: $blue-font;
-    background-color: $blue-background;
-    border-color: $blue-border;
+    border-radius: 3px;
+	color: white;
+    background-color: $blue-accent;
+    border: none;
 }
 
 .selector-container.multiple.remove-button .selector-values>li { 
